--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^4.16.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "prisma": "^4.16.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
